# aios

./: .gitignore  README.md  eslint.config.js  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-setup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-tauri-shell/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-node-backend/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/backend/: package.json  tsconfig.json
apps/backend/scripts/: build-binaries.mjs  bundle.mjs
apps/backend/src/: index.ts
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: health.rs  mcp.rs  mod.rs  secrets.rs
apps/desktop/src-tauri/src/services/: config_loader.rs  keyring_service.rs  mcp_manager.rs  mod.rs
apps/desktop/src-tauri/src/types/: config.rs  errors.rs
apps/desktop/src/lib/: api.ts
