[package]
name = "aios-desktop"
version = "0.1.0"
description = "AIOS - Agent launcher and task manager"
authors = ["you"]
edition = "2021"

[lib]
name = "aios_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
backoff = { version = "0.4", features = ["tokio"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
